snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-all.jar.sha256
8b7a71cf7fa443593a4ba8c29bbb7cd6624f623e9f77c8e0ec34bf4e72d1c030